--- a/sass/site/site-compatible/woocommerce.scss
+++ b/sass/site/site-compatible/woocommerce.scss
@@ -67,10 +67,10 @@
 					margin: 0;
 					padding: 0;
 					background: none;
+					margin-right: 1em;
 				    
 				    a {
 						padding: .5em 0;
-						margin-right: 1em;
 				    }
 					
 					&.active {
@@ -79,7 +79,16 @@
 						}
 					}
 
-					&.active::before,
+					&.active::before {
+					    content: ' ';
+    					position: absolute;
+    					width: 100%;
+    					height: 3px;
+    					box-shadow: none;
+    					top: 0;
+    					left: 0;
+					}
+
 					&.active::after,
 					&::after,
 					&::before {
@@ -88,11 +97,28 @@
 					}
 				}
 
+				li::before {
+
+				}
+
 				li::after,
-				li::before,
 				&.tabs::before {
-				    display: none;
-				    border: 0;
+				    /*display: none;
+				    border: 0;*/
+				}
+			}
+
+			@media (min-width: $col-md) {
+				.woocommerce-Reviews {
+					#comments {
+						width: 55%;
+						float: left;
+					}
+					#review_form_wrapper {
+						width: 45%;
+						float: right;
+						padding-left: 2em;
+					}
 				}
 			}
 		}
